# QuantumPrisionersDilemma

./: QuantumPrisonersDilemma.ipynb  README.md  control.py  entregable1.ipynb  multithreading.py  pyproject.toml  requirements.txt
